; ModuleID = '/home/carl/AnghaBench/mongoose/examples/api_server/extr_api_server.c_has_prefix.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/api_server/extr_api_server.c_has_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_str = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mg_str*, %struct.mg_str*)* @has_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @has_prefix(%struct.mg_str* %0, %struct.mg_str* %1) #0 {
  %3 = alloca %struct.mg_str*, align 8
  %4 = alloca %struct.mg_str*, align 8
  store %struct.mg_str* %0, %struct.mg_str** %3, align 8
  store %struct.mg_str* %1, %struct.mg_str** %4, align 8
  %5 = load %struct.mg_str*, %struct.mg_str** %3, align 8
  %6 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.mg_str*, %struct.mg_str** %4, align 8
  %9 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp sgt i64 %7, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %2
  %13 = load %struct.mg_str*, %struct.mg_str** %3, align 8
  %14 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.mg_str*, %struct.mg_str** %4, align 8
  %17 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.mg_str*, %struct.mg_str** %4, align 8
  %20 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = call i64 @memcmp(i32 %15, i32 %18, i64 %21)
  %23 = icmp eq i64 %22, 0
  br label %24

24:                                               ; preds = %12, %2
  %25 = phi i1 [ false, %2 ], [ %23, %12 ]
  %26 = zext i1 %25 to i32
  ret i32 %26
}

declare dso_local i64 @memcmp(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
